fixed spacing issue

--- a/css/_main.scss
+++ b/css/_main.scss
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     margin: 0;
-    padding: 20px 30px;
+    padding: 1rem 30px;
     width: 30%;
     height: 100%;
     border-radius: 10px;
@@ -66,7 +66,7 @@
         display: flex;
         justify-content: space-evenly;
         align-items: center;
-        padding: 1rem;
+        padding: 1rem 1rem 2rem;
         height: 30%;
         width: 100%;
         background-color: color.$color-five;
