--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ aside .bottom {
   display: flex;
   flex-direction: column;
   margin: 0;
-  padding: 20px 30px;
+  padding: 1rem 30px;
   width: 30%;
   height: 100%;
   border-radius: 10px;
@@ -103,7 +103,7 @@ aside .bottom {
   background-size: 100% 40%, cover;
   background-position: top;
   background-repeat: no-repeat;
-  color: white;
+  color: #ffffff;
   opacity: 0.8;
 }
 
@@ -152,7 +152,7 @@ aside .bottom {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  padding: 1rem;
+  padding: 1rem 1rem 2rem;
   height: 30%;
   width: 100%;
   background-color: #d3d3d3;
@@ -227,6 +227,32 @@ aside .bottom {
   background-image: url(/images/voteless.webp);
 }
 
+@media screen and (min-width: 768px) {
+  body {
+    width: 70vh;
+  }
+}
+@media screen and (min-width: 1200px) {
+  body {
+    width: 50vh;
+  }
+}
+@media screen and (min-width: 1920px) {
+  body {
+    font-size: 20px;
+    padding: 30px;
+    background-color: #cce7d9;
+    line-height: 1.8;
+  }
+}
+@media screen and (min-width: 1800px) {
+  body {
+    font-size: 50px;
+    padding: 40px;
+    background-color: #e8d4f0;
+    line-height: 2;
+  }
+}
 body {
   height: 100vh;
   max-height: 100vh;
